# python-s4vitar

./: .gitignore
01-introduccion/: 03-variables-y-tipos-de-datos.md  08-manejo-excepciones.md  introduccion.md
01-introduccion/codigo/: ambitos_variables.py  funciones.py
02-fundamentos/: 01-interprete-y-shebang.md  01-profundizando-listas.md  03-conjuntos.md  03-operadores-basicos.md  04-control-de-flujo.md  05-funciones.md  06-funciones-lambda.md
02-fundamentos/codigo/: bucles.py  comprension_listas.py  condicionales.py  excepciones.py  funciones_lambda.py  listas.py  test.py  tipos_de_datos.py  tuplas.py
02-fundamentos/proyecto/: main.py
03-estructuras-de-datos/: 02-tuplas.md  04-diccionarios.md
03-estructuras-de-datos/codigo/: conjuntos.py  diccionarios.py  listas.py
04-poo/: 01-clases-y-objetos.md
05-modulos-y-paquetes/: 01-modulos-y-paquetes.md  02-creacion-y-distribucion-de-paquetes.md
06-input-output/: 01-input-output.md  03-formateo-de-cadenas.md
06-input-output/codigo/: input-output.py  (+1 more)
07-biblioteca-estandar/: 02-expresiones-regulares.md  03-sockets-p1-y-p2.md  04-sockets-p3-y-p4.md
08-librerias-estandar/: 04-threading-multiprocessing.md
09-python-ofensivo/01-escaner-de-puertos/port-scanner/: README.md  pyproject.toml
09-python-ofensivo/01-escaner-de-puertos/port-scanner/src/port_scanner/core/: __init__.py  port_scanner.py
09-python-ofensivo/01-escaner-de-puertos/port-scanner/src/port_scanner/interface/: cli.py
09-python-ofensivo/01-escaner-de-puertos/port-scanner/src/port_scanner/ui/: __init__.py  banner.py  progress.py  results.py
(+17 files in other folders)
